record chatbot backend evolution file

--- a/consulting/刘乾 7.25.2022.md
+++ b/consulting/刘乾 7.25.2022.md
@@ -15,8 +15,11 @@ Question
    in the vector representations. Is this the problem only in RNN or also in Transformers. If we are using Transformers,
    the issue that MMI penalizes not only high-frequency, generic responses, but also fluent ones and thus can lead to
    ungrammatical outputs maybe is not an issue anymore?
+   1. the length of initial input matters? If T9 depends on the previous T but less on S. But what if the length of the
+      initial input increase. 
 6. different between parameters and hidden neurons. How to calculate the size of a model.
-7. 
+7. when set the max_length = 50, the problem disappear. Why?
+8. when you're reading paper, how do you read?
 
 Notes
 ===============
